macros/tests/compile_fail/package_builder_integer.stderr
error: [melbi] builder must be an identifier
 --> tests/compile_fail/package_builder_integer.rs:5:27
  |
5 | #[melbi_package(builder = 123)]
  |                           ^^^
